--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,13 @@
 
 buildscript {
     ext.kotlin_version = '1.3.72'
+    ext.groupie_version = '2.1.0'
+
     repositories {
         google()
         jcenter()
-        
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
