--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.RegisterActivity" />
-        <activity android:name=".ui.LoginActivity"/>
 
+        <activity android:name=".ui.NewMessagesActivity"
+            android:parentActivityName=".ui.LatestMessagesActivity" >
+            <meta-data android:name = "android:support.PARENT_ACTIVITY"
+                android:value=".ui.LatestMessagesActivity"/>
+        </activity>
+
+        <activity android:name=".ui.RegisterActivity" />
+        <activity android:name=".ui.LoginActivity" />
     </application>
 
 </manifest>
