ChatActivity and ChatRow creation
Created send and received chat row xml layout, refactor of code in StartActivityHelper class - template

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,22 +9,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
-        <activity android:name=".ui.LatestMessagesActivity">
+        <activity android:name=".ui.message.ChatActivity"
+            android:parentActivityName=".ui.message.LatestMessagesActivity">
+            <meta-data
+                android:name="android:support.PARENT_ACTIVITY"
+                android:value=".ui.LatestMessagesActivity" />
+        </activity>
+        <activity android:name=".ui.message.LatestMessagesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ui.NewMessagesActivity"
-            android:parentActivityName=".ui.LatestMessagesActivity" >
-            <meta-data android:name = "android:support.PARENT_ACTIVITY"
-                android:value=".ui.LatestMessagesActivity"/>
+        <activity
+            android:name=".ui.message.NewMessagesActivity"
+            android:parentActivityName=".ui.message.LatestMessagesActivity">
+            <meta-data
+                android:name="android:support.PARENT_ACTIVITY"
+                android:value=".ui.LatestMessagesActivity" />
         </activity>
-
-        <activity android:name=".ui.RegisterActivity" />
-        <activity android:name=".ui.LoginActivity" />
+        <activity android:name=".ui.registerlogin.RegisterActivity" />
+        <activity android:name=".ui.registerlogin.LoginActivity" />
     </application>
 
 </manifest>
